--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "96": "src/assets/icon-96.png"
   },
   "permissions": ["downloads"],
-  "host_permissions": ["*://chat.deepseek.com/*"],
+  "host_permissions": ["https://chat.deepseek.com/*"],
   "background": {
     "scripts": ["dist/background/background.js"]
   },
@@ -24,7 +24,7 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self';"
+    "extension_pages": "default-src 'self'; object-src 'none';"
   },
   "browser_specific_settings": {
     "gecko": {
